force-app/main/default/objects/Contact/fields/Email_Match_Account__c.field-meta.xml
<CustomField>
    <fullName>Email_Match_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, Contact&#39;s email will be auto-filled with the related Account&#39;s, if it exists.</description>
    <label>Email same as account</label>
    <type>Checkbox</type>
</CustomField>