force-app/main/default/objects/Contact/fields/Phone_Match_Account__c.field-meta.xml
<CustomField>
    <fullName>Phone_Match_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, Contact&#39;s phone number will be auto-filled with the related Account&#39;s, if it exists.</description>
    <label>Phone # same as account</label>
    <type>Checkbox</type>
</CustomField>