force-app/main/default/objects/Contact/validationRules/Contact_must_be_in_Account_ZIP_Code.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_must_be_in_Account_ZIP_Code</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(AccountId)), MailingPostalCode  &lt;&gt;  Account.ShippingPostalCode)</errorConditionFormula>
    <errorMessage>Contact&#39;s Mailing Postal Code must match their associated account&#39;s Shipping Postal Code.</errorMessage>
</ValidationRule>